# CodingInterview

./: 第一章 面试的流程.md  第三章 高质量的代码.md  第二章 面试所需的基础知识.md  第五章 优化时间和空间效率.md  第六章 面试中的各项能力.md  第四章 解决面试题的思路.md
code/: CMakeLists.txt
code/src/13_RobotMove/: robotMove.cc
code/src/14_CuttingRope/: cuttingRope.cc
code/src/15_NumberOf1InBinary/: numberOf1InBinary.cc
code/src/16_Power/: power.cc
code/src/17_Print1ToMaxOfNDigits/: print1ToMaxOfNDigits.cc
code/src/18_DeleteNodeInList/: deleteDuplicatedNode.cc  deleteNodeInList.cc
code/src/19_RegularExpressionsMatching/: regularExpressions.cc
code/src/20_NumericStrings/: numericString.cc
code/src/21_ReorderArray/: reorderArray.cc
code/src/22_KthNodeFromEnd/: kthNodeFromEnd.cc
code/src/23_EntryNodeInListLoop/: entryNodeInListLoop.cc
code/src/24_ReverseList/: reverseList.cc
code/src/25_MergeSortedLists/: mergeSortedLists.cc
code/src/26_SubstructureInTree/: substructureInTree.cc
code/src/27_MirrorOfBinaryTree/: mirrorOfBinaryTree.cc
code/src/28_SymmetricalBinaryTree/: symmetricalBinaryTree.cc
code/src/29_PrintMatrix/: printMatrix.cc
code/src/30_MinInStack/: MinInStack.cc  StackWithMin.h
code/src/31_StackPushPopOrder/: StackPushPopOrder.cc
code/src/32_PrintTreeFromTopToBottom/: PrintTreeFromTopToBottom_1.cc  PrintTreesInLines.cc  PrintTreesInZigzag.cc
code/src/33_SquenceOfBST/: SquenceOfBST.cc
code/src/34_PathInTree/: PathInTree.cc
code/src/35_CopyComplexList/: ComplexList.cc  ComplexList.h  CopyComplexList.cc
code/src/36_ConvertBinarySearchTree/: ConvertBinarySearchTree.cc
code/src/37_SerializeBinaryTrees/: SerializeBinaryTrees.cc
code/src/38_StringPermutation/: StringPermutation.cc
code/src/39_MoreThanHalfNumber/: MoreThanHalfNumber.cc
code/src/40_KLeastNumbers/: KLeastNumbers.cc
code/src/41_StreamMedian/: StreamMedian.cc
code/src/42_GreatestSumOfSubarrays/: GreatestSumOfSubarrays.cc
code/src/43_NumberOf1/: NumberOf1.cc
code/src/44_DigitsInSequence/: DigitsInSequence.cc
code/src/45_SortArrayForMinNumber/: SortArrayForMinNumber.cc
code/src/46_TranslateNumbersToStrings/: TranslateNumbersToStrings.cc
code/src/47_MaxValueOfGifts/: MaxValueOfGifts.cc
code/src/48_LongestSubstringWithoutDup/: LongestSubstringWithoutDup.cc
code/src/49_UglyNumber/: UglyNumber.cc
code/src/50_FirstNotRepeatingChar/: FirstCharacterInStream.cc  FirstNotRepeatingChar.cc
code/src/51_InversePairs/: InversePairs.cc
code/src/52_FirstCommonNodesInLists/: FirstCommonNodesInLists.cc
code/src/53_NumberOfK/: IntegerIdenticalToIndex.cc  MissingNumber.cc  NumberOfK.cc
code/src/54_KthNodeInBST/: KthNodeInBST.cc
code/src/55_01_TreeDepth/: TreeDepth.cc
code/src/55_02_BalancedBianryTree/: BalancedBianryTree.cc
code/src/56_01_NumbersAppearOnce/: NumbersAppearOnce.cc
code/src/56_02_NumberAppearingOnce/: NumberAppearingOnce.cc
code/src/57_01_TwoNumbersWithSum/: TwoNumbersWithSum.cc
code/src/57_02_ContinuousSqueueWithSum/: ContinuousSqueueWithSum.cc
code/src/58_01_ReverseWordsInSentence/: ReverseWordsInSentence.cc
code/src/58_02_LeftRotateString/: LeftRotateString.cc
code/src/59_01_MaxInSlidingWindow/: MaxInSlidingWindow.cc
code/src/59_02_QueueWithMax/: QueueWithMax.cc
code/src/60_DicesProbability/: DicesProbability.cc
code/src/61_ContinousCards/: ContinousCards.cc
code/src/62_LastNumberInCircle/: LastNumberInCircle.cc
code/src/63_MaximalProfit/: MaximalProfit.cc
code/src/64_Accumulate/: Accumulate.cc
code/src/65_AddTwoNumbers/: AddTwoNumbers.cc
code/src/66_ConstArray/: ConstArray.cc
code/src/67_StringToInt/: StringToInt.cc
code/src/68_CommonParentInTree/: CommonParentInTree.cc
code/src/ConstructBinaryTree/: constructBinaryTree.cc
code/src/Fibonacci/: fibonacci.cc
code/src/FindDuplicate/: findDuplicate.cc  findDuplicateNoEdit.cc
code/src/FindInPartiallySortedMatrix/: findInPartiallySortedMatrix.cc
code/src/MinNumberInRotatedArray/: minNumberInRotatedArray.cc
code/src/NextNodeInBinaryTrees/: nextNodeInBinaryTrees.cc
code/src/PrintListInReversedOrder/: printListInReversedOrder.cc
code/src/QueueWithTwoStacks/: Queue.h  queueWithTwoStacks.cc
code/src/ReplaceSpaces/: replaceSpaces.cc
code/src/StringPathInMatrix/: stringPathInMatrix.cc
code/src/Test/: testString.cc
code/src/Utilities/: Array.cc  Array.h  StringUtil.cc  StringUtil.h  Tree.cc  Tree.h  binaryTree.cc  binaryTree.h  list.cc  list.h
